--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "description": "",
   "main": "lib/index.js",
   "scripts": {
+    "build": "parcel build -t node src/index.ts -d lib/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "tett23",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "parcel-bundler": "^1.11.0",
+    "typescript": "^3.3.1"
+  }
 }
