Get rid of ObjectTypes

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2018"
 [dependencies]
 flate2 = { version = "^1.0.6", features = ["rust_backend"], default-features = false }
 failure = { version = "^0.1.5" }
+git2 = { version = "^0.8.0" }
